crates/data_flow/re_mcap/src/decoders/snapshots/re_mcap__decoders__protobuf__integration_tests__oneof_fields.snap
---
source: crates/data_flow/re_mcap/src/decoders/protobuf.rs
expression: "format_chunk(&chunks[0])"
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                       │
│ * entity_path: /color_topic                                                                                                                                                     │
│ * id: [**REDACTED**]                                                                                                                                                            │
│ * version: [**REDACTED**]                                                                                                                                                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬───────────────────────────────┬──────────────────────────────────┬──────────────────────────────────────────────────────────┐ │
│ │ RowId                                         ┆ message_log_time              ┆ message_publish_time             ┆ com.example.Color:message                                │ │
│ │ ---                                           ┆ ---                           ┆ ---                              ┆ ---                                                      │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: Timestamp(ns)           ┆ type: Timestamp(ns)              ┆ type: List(Struct("object": non-null Utf8, "color":      │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: message_log_time  ┆ index_name: message_publish_time ┆ Struct("rgb": Utf8, "hsv": Utf8, "bgr": Utf8), metadata: │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true               ┆ is_sorted: true                  ┆ {"ARROW:extension:name":                                 │ │
│ │ is_sorted: true                               ┆ kind: index                   ┆ kind: index                      ┆ "rerun.datatypes.ProtobufOneOf"}, "gamma": Float32))     │ │
│ │ kind: control                                 ┆                               ┆                                  ┆ archetype: com.example.Color                             │ │
│ │                                               ┆                               ┆                                  ┆ component: com.example.Color:message                     │ │
│ │                                               ┆                               ┆                                  ┆ kind: data                                               │ │
│ ╞═══════════════════════════════════════════════╪═══════════════════════════════╪══════════════════════════════════╪══════════════════════════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ 1970-01-01T00:00:00.000000001 ┆ 1970-01-01T00:00:00.000000001    ┆ [{object: box, color: {rgb: 255,0,0, hsv: null, bgr:     │ │
│ │                                               ┆                               ┆                                  ┆ null}, gamma: 2.2}]                                      │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 1970-01-01T00:00:00.000000002 ┆ 1970-01-01T00:00:00.000000002    ┆ [{object: sphere, color: {rgb: null, hsv: 120,1.0,1.0,   │ │
│ │                                               ┆                               ┆                                  ┆ bgr: null}, gamma: null}]                                │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 1970-01-01T00:00:00.000000003 ┆ 1970-01-01T00:00:00.000000003    ┆ [{object: cone, color: null, gamma: null}]               │ │
│ └───────────────────────────────────────────────┴───────────────────────────────┴──────────────────────────────────┴──────────────────────────────────────────────────────────┘ │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
